# ros_ros2_latency_evaluation

./: README.md  ROS1_ROS2_comparison.ipynb  irobot_psg_topology.json
ROS/: run.py
ROS/tb_digital_twin/: CMakeLists.txt
ROS/tb_digital_twin/include/data_logger/: data_logger.cpp
ROS/tb_digital_twin/msg/: Current.msg  Float32Stamped.msg  Power.msg  Voltage.msg
ROS/tb_digital_twin/src/: AngularConverter.cpp  EfficiencyMap.cpp  PowerCalculator.cpp  TorqueCalculator.cpp  WindingErrorChecker.cpp  currentVoltageFlow.cpp
ROS2/: run.py
ROS2/loading_motor_dt/include/data_logger/: data_logger.cpp  data_logger.hpp
ROS2/loading_motor_dt/src/angular_converter/: AngularConverter.cpp
ROS2/loading_motor_dt/src/efficiency/: EfficiencyMap.cpp
ROS2/loading_motor_dt/src/power_calculator/: PowerCalculator.cpp
ROS2/loading_motor_dt/src/torque_calculator/: TorqueCalculator.cpp
results/ROS/logged_data/publishers/: angular_converter.csv  data_processor.csv  efficiency_map.csv  power_calculator.csv  torque_calculator.csv
results/ROS/logged_data/subscriptions/: angular_converter.csv  efficiency_map.csv  power_calculator.csv  torque_calculator.csv
results/ROS2/logged_data/publishers/: angular_converter.csv  data_processor.csv  efficiency_map.csv  power_calculator.csv  torque_calculator.csv
results/ROS2/logged_data/subscriptions/: data_processor.csv  efficiency_map.csv  power_calculator.csv  torque_calculator.csv
results/iRobot Benchmark/: events.txt  latency_all.txt  latency_total.txt  resources.txt
